# AgentBuffer

./: .env.example  .gitignore  CHANGELOG.md  DESIGN.md  LICENSE  README.md  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/demo/: eslint.config.mjs  package.json
apps/demo/app/: globals.css  layout.tsx  page.tsx
apps/demo/components/: context-engine.tsx  cta-footer.tsx  delegation.tsx  deployment.tsx  hero.tsx  nav.tsx  section-label.tsx
apps/demo/lib/: mock-data.ts
apps/web/: .env.example  package.json
apps/web/actions/: brands.ts  (+2 more)
codegen/: generate.sh
docs/: backend_gap_analysis.md  carousel_pipeline.md  cognition_architecture.md  design_agent_architecture.md  final_merge_plan.md  imagen_pipeline.md  integration_plan.md  interaction_proposals.md  keybind_matrix.md  mcp_integration.md  qa_report.md  ux_state_machine.md  veo_pipeline.md
gateway/: auth.py  db.py  main.py  pyproject.toml
gateway/routes/: __init__.py  assets.py  brands.py  campaigns.py  dead_letters.py  designs.py  messages.py  performance.py  publish.py  ranking.py  slots.py
services/carousel_creator/: __init__.py  agent.py  pagination.py  pyproject.toml  renderer.py
services/carousel_creator/tests/: test_agent.py  test_pagination.py  test_renderer.py
services/critic/: agent.py  pyproject.toml
services/design_director/: main.py  planner.py  pyproject.toml  registry.py
services/design_specialists/: layout_specialist.py  pyproject.toml
services/head_agent/: README.md  agent.py  analysis.py  brandkit_commands.py  config.py  pyproject.toml
services/image_creator/: __init__.py  agent.py  config.py  imagen_client.py  prompt_adapter.py  pyproject.toml
services/image_creator/tests/: test_agent.py  test_imagen_client.py  test_prompt_adapter.py
services/performance_harvester/: agent.py  pyproject.toml  summary.py
services/publisher/: agent.py  pyproject.toml
services/shared/: brandkit_store.py  envelope.py  models.py  pyproject.toml
services/strategist/: agent.py  pyproject.toml
services/video_creator/: __init__.py  agent.py  config.py  pyproject.toml  trends.py  veo_client.py
services/youtube_automation/: .env.example  README.md  __init__.py  app.py  cli.py  config.py  database.py  pyproject.toml
src/agents/: cognition_agent.py  models.py  planner.py
src/mcp_server/: __init__.py  auth.py  campaign_store.py  models.py  server.py  tools.py
src/youtube_automation/: config.py
supabase/migrations/: 00001_init.sql  00002_add_video_platforms.sql  00003_add_bluesky_and_statuses.sql  00003_add_image_creator_agent.sql  00003_campaigns_and_assets.sql  00003_platform_connections.sql
tests/: mock_mcp_client.py  test_auth.py  test_cognition_agent.py  test_mock_client.py  test_planner.py  test_server.py  test_tool_wrappers.py  test_tools.py
(+100 files in other folders)
