[project]
name = "agentbuffer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "uagents>=0.20.0",
    "uagents-core",
    "openai",
    "pydantic",
    "google-genai>=1.0",
]

[dependency-groups]
dev = ["ruff>=0.8", "pytest>=9.0", "pytest-asyncio>=0.24", "Pillow>=10.0"]

[tool.uv.workspace]
members = ["services/*", "gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
