[project]
name = "agentbuffer-carousel-creator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0",
    "pydantic>=2.0",
    "agentbuffer-shared",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.uv.sources]
agentbuffer-shared = { workspace = true }
